@@ -1,0 +1,2 @@
+This directory contains tests for the bugs
+that have been fixed.
